--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci --only=production
+# Install all dependencies (including dev dependencies needed for build)
+RUN npm ci
 
 COPY . .
 
